--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "dev": "bun run --watch backend/index.ts"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "svelte": "^4.2.9"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "hono": "^3.12.6"
+    "hono": "^3.12.6",
+    "mime": "^4.0.1"
   }
 }
