--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@tailwindcss/typography": "^0.5.10",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.4.17",
     "daisyui": "^4.6.0",
     "postcss": "^8.4.33",
@@ -25,5 +26,8 @@
     "typescript": "^5.0.0",
     "vite": "^5.0.3"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "uuid": "^9.0.1"
+  }
 }
