--- a/package.json
+++ b/package.json
@@ -2,19 +2,21 @@
   "name": "picture-frame",
   "module": "backend/index.ts",
   "type": "module",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "scripts": {
     "dev": "bun run --watch backend/index.ts",
     "publish": "docker buildx build --push --platform linux/arm64/v8,linux/amd64 -t josiahsayers15/picture-frame:$npm_package_version -t josiahsayers15/picture-frame:latest ."
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/uuid": "^9.0.8"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
     "hono": "^3.12.6",
-    "mime": "^4.0.1"
+    "mime": "^4.0.1",
+    "uuid": "^9.0.1"
   }
 }
